# zmark

./: .env.example  .gitignore  .releaserc  CHANGELOG.md  EXTENSION_PLAN.md  README.md  ROADMAP.md  biome.json  components.json  cspell.json  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: release-bot.yml  release.yml
.husky/: commit-msg  pre-commit
scripts/: verify-commit.js
src/: App.tsx  App0.tsx  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  lib.rs  main.rs
src-tauri/src/commands/: ai.rs  git.rs  knowledge_base.rs  mod.rs  runner.rs  startup.rs  tray.rs
src/components/: action-buttons.tsx  app-sidebar.tsx  collapse-provider.tsx  error-boundary.tsx  input-dialog.tsx  search-command.tsx  tree.tsx
src/consts/: chat-ui.ts  chat.ts  highlight.ts
src/contexts/: collapse-context.tsx
src/hooks/: index.ts  use-color-highlight.ts  use-key-display.ts  use-math-popover.ts  use-menu-bar.ts  use-save-shortcut.ts  use-table-of-contents.ts  useAiCopilot.ts  useAsyncAction.ts  useCollaboration.ts  useEditorEvents.ts  useEditorSave.ts  useEditorSubscription.ts  useLinkPopover.ts  useMathPopover.ts  useMenuBar.ts  useTableOfContents.ts
src/lib/: file.ts
src/provider/: collapse-provider.tsx
src/providers/: theme-provider.tsx
src/stores/: authStore.ts  collab.ts  collaboration.ts  editor.ts  index.ts  kb.ts  search.ts
src/styles/: globals.css  lowlight.scss
src/types/: editor.ts  kb.ts  search.ts
src/utils/: auth.ts  collab.ts  (+12 more)
(+77 files in other folders)
